# tracer

./: CMakeLists.txt  CMakeListsPrivate.txt  EEPROMInterface.cpp  EEPROMInterface.h  EEPROMStorage.cpp  EEPROMStorage.h  LICENSE.txt  Makefile  MatrixDrone.cpp  README.md  StaticPID.cpp  StaticPID.h  TODO.txt  TRACER.ino  build_options.mk  elf_mangle  log  main.elf  main.hex  mk64fx512.ld  old.mk  platformio.ini  qqq  rdnotes.txt  rebuild.sh  rlink.ld  tmp.txt  tracer.elf  tracer.hex  tracer.mk
src/: CMakeLists.txt  GCode.info  Kernel.cpp  Kernel.h  TODO.txt  TODO_LOWLEVEL.txt  TODO_STEPPER_CONTROL.txt  TODO_TRACER.txt  boot.c  config.h  debug.txt  hardware_language_abstraction.h  interface.h  interfaces.cpp  main.c  main.cpp  parameters_indices.h  sanity_check.h  structure.txt
src/Actions/: Actions.h  BinaryActions.cpp  BinaryActions.h  ContinuousActions.cpp  ContinuousActions.h  ServoActions.cpp  ServoActions.h
src/Actuators/: Actuators.h  DigitalGPIO.cpp  DigitalGPIO.h  PWMGPIO.cpp  PWMGPIO.h  Servo.cpp  Servo.h
src/Config/: _ConfigChecker.cpp  _ConfigChecker.h  _general_config.h  actions_config.h  config_file.h  control_config.h  control_loops_config.h  controller_gcode_config.h  controller_lcd_config.h  controller_program_config.h  controller_terminal_config.h  eeprom_config.h  geometry.cpp  geometry.h  hl_config.h  kernel_config.h  scheduler_config.h  sensors_config.h  stepper_control_config.h
src/Control/: Control.cpp  Control.h  Controllers.cpp  Controllers.h  Interfaces.txt
src/ControlLoops/: Asserv.h  ControlLoops.cpp  ControlLoops.h  ExternalParameters.cpp  ExternalParameters.h  OrientationController.cpp  OrientationController.h  PID.cpp  PID.h
src/ControlSystem/: ControlLayer.h  ControlManager.cpp  ControlManager.h  OldOrientationController.cpp  OldOrientationController.h  OrientationController.cpp  PID.cpp
src/Core/: Asserv.cpp  Asserv.h  Core.cpp  Core.h  EEPROMStorage.cpp  EEPROMStorage.h  MachineControllerCustom.cpp  MachineControllerSystem.cpp  MachineControllerSystem.h  hardware_language_abstraction.cpp  hardware_language_abstraction.h
src/DataStructures/: ArgQueue.cpp  ArgQueue.h  ArgumentsContainer.cpp  ArgumentsContainer.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Queue.cpp  Queue.h  StringParser.cpp  StringParser.h  StringUtils.cpp  StringUtils.h  Tree.cpp  Tree.h  string.cpp  string.h
src/DroneControl/: CoefficientArray.cpp  CoefficientArray.h  DroneTest.cpp  DroneTest.h  Drone_physics.txt  LinearSystem.cpp  LinearSystem.h  MatrixDrone.h  MotorRegisterer.cpp  SolidMultiRotor.cpp  SolidMultiRotor.h
src/EEPROM/: EEPROM.cpp  EEPROM.h  EEPROMInterface.cpp  EEPROMInterface.h  EEPROMMap.cpp  EEPROMMap.h  EEPROMNode.cpp  EEPROMNode.h  EEPROMStorage.cpp  EEPROMStorage.h  EEPROMTree.cpp  EEPROMTree.h  _eeprom_storage_data.h
src/EEPROMStorage/: EEPROMInterface.cpp  EEPROMInterface.h  EEPROMNode.cpp  EEPROMNode.h  EEPROMStorage.cpp  EEPROMStorage.h  _eeprom_storage_data.h
src/Interaction/: CommunicationPipe.cpp  CommunicationPipe.h  Interaction.cpp  Interaction.h  Interfaces.txt
src/Interfaces/: CommandInterface.cpp  CommandInterface.h  GCodeInterface.cpp  GCodeInterface.h  GCommand.h  Interfaces.cpp  Interfaces.h  TreeManager.cpp  TreeManager.h  _interface_data.h  interface_config.h  parser_config.h
src/Kernel/: Kernel.cpp  Kernel.h  Project.h  USBuart.cpp  USBuart.h  kernel.c  kernel.h  memory.c  memory.h
src/LinearSolver/: CoefficientArray.cpp  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h
src/Math/: CoefficientArray.cpp  CoefficientArray.h  LinearSystem.cpp  LinearSystem.h  Matrix.cpp  Matrix.h  RotationMatrix3D.cpp  RotationMatrix3D.h  Vector3D.cpp  Vector3D.h  math_constants.h  rotation_data.h
src/MovementKernels/: MachineAbstraction.cpp  MachineAbstraction.h  MovementExecuter.cpp  MovementExecuter.h  StepperAbstraction.cpp  StepperAbstraction.h  StepperController.cpp  StepperController.h
src/Project/: Machine.cpp  Machine.h  MachineController.cpp  MachineController.h  Project.cpp  Project.h  TempControl.cpp  TempControl.h  TemperatureController.cpp  TemperatureController.h  arch_config.h  scheduler_imp.c  sequences_config.h
src/Sensors/: Endstops.cpp  Sensors.h
src/StepperControl/: IncrementComputer.cpp  IncrementComputer.h  JerkPlanner.cpp  JerkPlanner.h  Machine.cpp  Machine.h  MachineInterface.cpp  MachineInterface.h  MotionExecuter.cpp  MotionExecuter.h  MotionScheduler.cpp  MotionScheduler.h  MovementCoordinator.cpp  MovementCoordinator.h  MovementExecuter.cpp  MovementExecuter.h  MovementScheduler.cpp  MovementScheduler.h  SpeedManager.cpp  SpeedManager.h  SpeedPlanner.cpp  SpeedPlanner.h  StepperAbstraction.h  StepperController.cpp  StepperController.h  StepperKernel.cpp  StepperKernel.h  Steppers.cpp  Steppers.h  SteppersData.cpp  SteppersData.h  SubMovementManager.cpp  SubMovementManager.h  TrajectoryExecuter.cpp  TrajectoryExecuter.h  TrajectoryTracer.cpp  TrajectoryTracer.h  _core_include.h  _kernels_data.h  _kinematics_data.h  (+5 more)
src/TaskScheduler/: Asserv.h  TaskScheduler.cpp  TaskScheduler.h  _scheduler_safe_use_help.txt  _task_scheduler_data.h  scheduler_generation.h  task_state_t.h
src/algo/: solver.c  solver.h
src/arch/: arch_types.h
src/config/: arm_ece.h  config_file.h  cube_fablab.h  jultest.h  kernel.mk  kernel_cfg.mk  large_config.h  ordbot.h  project.mk  small_config.h  test.h
src/config_files/: tracerbot_config.h
src/core/: Makefile  core.c  core.h  debug.c  debug.h  heap.c  heap.h  ic.h  ram.c  ram.h  stack.h  startup.c  startup.h  unified_link_script.ld
src/dmz/: Makefile  fstring.c  list.c  list.h  stdmem.h  string.c  string.h  syscall.c  syscall.h
src/driver/: ic.c  ic.h  interrupt.h  timer.h
src/hard/: Makefile  multi_macro.h  unified_link_script.2ld  unified_link_script.ld
src/hardware/: arch.h  unified_link_script.ld
src/hardware_language_abstraction/: digital_write_fast.h  hardware_language_abstraction_atmega2560.cpp  hardware_language_abstraction_atmega2560.h  hardware_language_abstraction_stm32_nucleo_l476rg.h  hardware_language_abstraction_teensy3.cpp  (+4 more)
(+1727 files in other folders)
